[package]
name = "rdbc_sqlite3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
log = "0.4.16"
rdbc = {git = "https://github.com/linq-rs/rdbc.git"}
sqlite3-sys = "0.14.0"
once_cell = "1.16.0"

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.1.2"

[dev-dependencies]
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.4", features = ["async_futures", "html_reports"]}
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"


[[bench]]
harness = false
name = "cuad_benchmark"